--- a/css/myPage.css
+++ b/css/myPage.css
@@ -10,17 +10,51 @@ body {
   position: relative;
   top: 70px;
 }
+body .myPage_mainItem {
+  margin: 0 auto;
+}
+body .myPage_mainItem .member {
+  display: flex;
+}
+body .myPage_mainItem .subItem {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: 16px 8px;
+}
 body .myPage_mainItem .subItem a {
+  border: 1px solid #000;
+  border-radius: 32px;
+  padding: 16px;
   display: flex;
   color: #555;
   text-decoration: none;
   font-weight: bold;
   vertical-align: middle;
-  padding: 8px 0;
 }
 body .myPage_mainItem .subItem a p:first-child {
-  width: 32px;
+  padding-right: 8px;
   text-align: center;
+}
+body .myPage_mainItem .cart,
+body .myPage_mainItem .like {
+  margin: 16px auto;
+}
+body .myPage_mainItem .cart a,
+body .myPage_mainItem .like a {
+  padding: 8px 100px;
+}
+body .myPage_mainItem .like a {
+  padding: 8px 85px;
+}
+body .myPage_mainItem .like a i {
+  color: #ed6589;
+}
+body .myPage_mainItem .guide {
+  margin: 16px auto;
+}
+body .myPage_mainItem .guide a {
+  border: none;
 }
 
 footer {
