--- a/css/myPage.scss
+++ b/css/myPage.scss
@@ -10,18 +10,47 @@ body {
   position: relative;
   top: 70px;
   .myPage_mainItem {
+    margin: 0 auto;
+    .member {
+      display: flex;
+    }
     .subItem {
+      width: fit-content;
+      margin: 16px 8px;
       a {
+        border: 1px solid #000;
+        border-radius: 32px;
+        padding: 16px;
         display: flex;
         color: #555;
         text-decoration: none;
         font-weight: bold;
         vertical-align: middle;
-        padding: 8px 0;
         p:first-child {
-          width: 32px;
+          padding-right: 8px;
           text-align: center;
         }
+      }
+    }
+    .cart,
+    .like {
+      margin: 16px auto;
+      a {
+        padding: 8px 100px;
+      }
+    }
+    .like {
+      a {
+        padding: 8px 85px;
+        i {
+          color: #ed6589;
+        }
+      }
+    }
+    .guide {
+      margin: 16px auto;
+      a {
+        border: none;
       }
     }
   }
