--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ header .first_header {
   width: 100%;
   box-sizing: border-box;
   background: #fff;
-  padding: 16px 0;
+  padding: 16px 0 8px;
 }
 header .first_header .logo {
   text-align: center;
@@ -28,7 +28,7 @@ header .first_header .logo img {
 }
 header .first_header .cart {
   position: absolute;
-  top: 4px;
+  top: 8px;
   right: 10px;
   font-size: 32px;
 }
@@ -81,6 +81,9 @@ header .first_header .hamburger_box .hamburger.active span:nth-child(1) {
 header .first_header .hamburger_box .hamburger.active span:nth-child(3) {
   transform: translateY(-16px) rotate(90deg);
 }
+header .first_header .hamburger_box nav {
+  height: 100vh;
+}
 header .first_header .hamburger_box nav.globalMenuSp {
   position: fixed;
   z-index: 2;
@@ -94,8 +97,7 @@ header .first_header .hamburger_box nav.globalMenuSp {
   width: 100%;
 }
 header .first_header .hamburger_box nav.globalMenuSp ul {
-  background: #ccc;
-  margin: 0 auto;
+  margin: 48px auto;
   padding: 0;
   width: 100%;
 }
@@ -103,11 +105,7 @@ header .first_header .hamburger_box nav.globalMenuSp ul li {
   list-style-type: none;
   padding: 0;
   width: 100%;
-  border-bottom: 1px solid #fff;
-}
-header .first_header .hamburger_box nav.globalMenuSp ul li:last-child {
-  padding-bottom: 0;
-  border-bottom: none;
+  border-bottom: 1px solid #555;
 }
 header .first_header .hamburger_box nav.globalMenuSp ul li:hover {
   background: #ddd;
@@ -124,7 +122,7 @@ header .first_header .hamburger_box nav.globalMenuSp.active {
 
 body {
   position: relative;
-  top: 70px;
+  top: 62px;
 }
 body main .slideShow .wrapper {
   max-width: 100vw;
@@ -283,7 +281,7 @@ body main .search .search_bar .search_container button:hover {
 }
 body main .information {
   margin: 56px auto;
-  max-width: 640px;
+  max-width: 6480px;
 }
 body main .information .infoItem {
   margin: 16px;
@@ -299,6 +297,122 @@ body main .information .infoItem .date {
 body main .information .infoItem .text {
   font-size: 12px;
 }
+body main .styling {
+  max-width: 100vw;
+  height: 800px;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  background: #bd979f;
+}
+body main .styling .scene {
+  width: 100%;
+  position: relative;
+  height: 86%;
+  background: #daacae;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-end;
+  perspective: 500px;
+}
+body main .styling .item {
+  position: absolute;
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  background-position: left top;
+  pointer-events: none;
+}
+body main .styling #plant {
+  background-image: url(https://ouch-cdn2.icons8.com/CZaKIJ63jjlgvDcdjcjUnlfpffRScIiXzi4HMrpLAsM/rs:fit:728:912/czM6Ly9pY29uczgu/b3VjaC1wcm9kLmFz/c2V0cy9wbmcvNjM2/L2RkMzRmMzVhLWVk/YmMtNDRlZi1hOGNm/LTZlZjJlMTBlMzU2/My5wbmc.png);
+  width: 500px;
+  height: 620px;
+  bottom: -26px;
+  margin-right: 400px;
+}
+body main .styling #plant-2 {
+  background-image: url(https://ouch-cdn2.icons8.com/E47kcuNp_3-4IrDybcMwr6zMELcbhBQLKzImj-ot8E4/rs:fit:855:912/czM6Ly9pY29uczgu/b3VjaC1wcm9kLmFz/c2V0cy9wbmcvMzE5/LzljNjEwNjJhLTk4/YmMtNDViMS1iZGVm/LTMwNzVjMTMxYjQ1/OC5wbmc.png);
+  width: 300px;
+  height: 320px;
+  bottom: -50px;
+  margin-right: 300px;
+}
+body main .styling #plant-3 {
+  background-image: url(https://ouch-cdn2.icons8.com/oo4nsgAN74wL_FDHCUIwOdB3rPN6SGavRjxiz-1ds4s/rs:fit:1201:912/czM6Ly9pY29uczgu/b3VjaC1wcm9kLmFz/c2V0cy9wbmcvMTk0/LzVlMGQ1NjhlLWNh/NTEtNGJlNC1iNWEz/LTQyYTcwNDlmZGMy/My5wbmc.png);
+  width: 160px;
+  height: 125px;
+  bottom: -50px;
+  margin-left: 380px;
+}
+body main .styling #books {
+  background-image: url(https://ouch-cdn2.icons8.com/AUAdQ5eK8APXniP0hwVusHWtZRMk9FA2Jm9FSza1StY/rs:fit:850:912/czM6Ly9pY29uczgu/b3VjaC1wcm9kLmFz/c2V0cy9wbmcvNy9j/NTcxMWIzNC1mMTYy/LTQ3MTAtOGExYi1l/YzY1M2FlN2IwYWYu/cG5n.png);
+  width: 200px;
+  height: 220px;
+  bottom: -40px;
+  margin-left: 620px;
+}
+body main .styling #apple {
+  background-image: url(https://ouch-cdn2.icons8.com/-O2SifADepTOg7bXJ5whR6wB0iMfq5y7vrIaJdmKp20/rs:fit:851:912/czM6Ly9pY29uczgu/b3VjaC1wcm9kLmFz/c2V0cy9wbmcvODYy/L2M3MjBkM2Q3LWMw/NTgtNDJkOC04ZGEw/LTc2MTM1N2YwMmNh/OC5wbmc.png);
+  width: 64px;
+  height: 70px;
+  top: -64px;
+  left: 30px;
+}
+body main .styling #clock {
+  background-image: url(https://ouch-cdn2.icons8.com/ggxsAQVGAa4GMIlNl6vMuk0ANcEK07E5woeRpplKofI/rs:fit:945:912/czM6Ly9pY29uczgu/b3VjaC1wcm9kLmFz/c2V0cy9wbmcvMzI0/L2RmMDQzMzc4LTcy/NTUtNDA5My04ZDQy/LTgxOTJjNmE2ZmQx/ZC5wbmc.png);
+  width: 170px;
+  height: 170px;
+  background-size: 100% auto;
+  background-position: left top;
+  bottom: 520px;
+  margin-left: 440px;
+}
+body main .styling #mirror {
+  width: 280px;
+  height: 580px;
+  position: relative;
+  box-shadow: 16px 2px 10px rgba(0, 0, 0, 0.4);
+  perspective: 500px;
+  border-top-left-radius: 300px;
+  border-top-right-radius: 300px;
+  transform-origin: top center;
+  transform: rotateX(3deg);
+  cursor: pointer;
+}
+body main .styling #mirror-content {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-image: url(https://data.whicdn.com/images/251238216/original.gif);
+  background-position: center center;
+  background-size: auto 100%;
+  background-repeat: no-repeat;
+  box-shadow: inset 6px 3px 10px rgba(0, 0, 0, 0.4);
+  border-top-left-radius: inherit;
+  border-top-right-radius: inherit;
+  border: 6px solid #e7e4df;
+  z-index: 0;
+  display: flex;
+  justify-content: center;
+}
+body main .styling #mirror-content:before {
+  position: absolute;
+  content: "「 ｃｌｉｃｋ ｍｅ 」";
+  font-family: sans-serif;
+  text-transform: uppercase;
+  color: #e7e4df;
+  font-weight: bold;
+  letter-spacing: 4px;
+  font-size: 10px;
+  text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
+  text-align: center;
+  bottom: 0;
+  z-index: 100;
+  opacity: 0.6;
+  transition: all 0.5s ease;
+  padding: 18px 0;
+}
 
 footer {
   margin-top: auto;
@@ -311,6 +425,10 @@ footer {
   color: #fff;
   letter-spacing: 2px;
   font-size: 10px;
+}
+footer a {
+  text-decoration: none;
+  color: #fff;
 }
 
 @media (max-width: 650px) {
