--- a/css/myPage.css
+++ b/css/myPage.css
@@ -23,13 +23,18 @@ body .myPage_mainItem .subItem {
   margin: 16px 8px;
 }
 body .myPage_mainItem .subItem a {
-  border: 1px solid #000;
+  border: 1px solid #555;
   border-radius: 32px;
   padding: 16px;
   display: flex;
   color: #555;
   text-decoration: none;
   font-weight: bold;
+  transition: all 0.4s;
+}
+body .myPage_mainItem .subItem a:hover {
+  background: #000;
+  color: #fff;
 }
 body .myPage_mainItem .subItem a p:first-child {
   padding-right: 8px;
@@ -44,10 +49,10 @@ body .myPage_mainItem .like {
 }
 body .myPage_mainItem .cart a,
 body .myPage_mainItem .like a {
-  padding: 8px 100px;
+  padding: 16px 100px;
 }
 body .myPage_mainItem .like a {
-  padding: 8px 85px;
+  padding: 16px 85px;
 }
 body .myPage_mainItem .like a i {
   color: #ed6589;
@@ -57,6 +62,10 @@ body .myPage_mainItem .guide {
 }
 body .myPage_mainItem .guide a {
   border: none;
+}
+body .myPage_mainItem .guide a:hover {
+  background: none;
+  color: #000;
 }
 body .sns {
   display: flex;
