--- a/css/myPage.scss
+++ b/css/myPage.scss
@@ -18,13 +18,18 @@ body {
       width: fit-content;
       margin: 16px 8px;
       a {
-        border: 1px solid #000;
+        border: 1px solid #555;
         border-radius: 32px;
         padding: 16px;
         display: flex;
         color: #555;
         text-decoration: none;
         font-weight: bold;
+        transition: all 0.4s;
+        &:hover {
+          background: #000;
+          color: #fff;
+        }
         p:first-child {
           padding-right: 8px;
           text-align: center;
@@ -38,12 +43,12 @@ body {
     .like {
       margin: 16px auto;
       a {
-        padding: 8px 100px;
+        padding: 16px 100px;
       }
     }
     .like {
       a {
-        padding: 8px 85px;
+        padding: 16px 85px;
         i {
           color: #ed6589;
         }
@@ -53,6 +58,10 @@ body {
       margin: 16px auto;
       a {
         border: none;
+        &:hover {
+          background: none;
+          color: #000;
+        }
       }
     }
   }
