--- a/css/myPage.css
+++ b/css/myPage.css
@@ -90,7 +90,7 @@ body .contents .contentsItem {
 body .contents .contentsItem img {
   width: 120px;
   height: 120px;
-  margin: 16px;
+  margin: 16px 8px;
   border-radius: 50%;
   transition: all 0.4s;
 }
