--- a/css/myPage.scss
+++ b/css/myPage.scss
@@ -86,7 +86,7 @@ body {
       img {
         width: 120px;
         height: 120px;
-        margin: 16px;
+        margin: 16px 8px;
         border-radius: 50%;
         transition: all 0.4s;
         &:hover {
