--- a/css/myPage.css
+++ b/css/myPage.css
@@ -97,12 +97,15 @@ body .contents .contentsItem img {
 body .contents .contentsItem img:hover {
   opacity: 0.8;
 }
-body .sns {
-  display: flex;
+body .app {
   margin: 0 auto;
 }
+body .sns {
+  display: flex;
+  margin: 16px auto;
+}
 body .sns .snsItem {
-  margin: 0 16px 32px;
+  margin: 0 16px;
   font-size: 32px;
 }
 body .sns .snsItem i,
