--- a/css/myPage.scss
+++ b/css/myPage.scss
@@ -95,11 +95,14 @@ body {
       }
     }
   }
+  .app {
+    margin: 0 auto;
+  }
   .sns {
     display: flex;
-    margin: 0 auto;
+    margin: 16px auto;
     .snsItem {
-      margin: 0 16px 32px;
+      margin: 0 16px;
       font-size: 32px;
       i,
       img {
