--- a/css/main.css
+++ b/css/main.css
@@ -308,7 +308,7 @@ body main .styling {
 body main .styling .scene {
   width: 100%;
   position: relative;
-  height: 86%;
+  height: 83%;
   background: #daacae;
   display: flex;
   flex-direction: row;
@@ -407,12 +407,27 @@ body main .styling #mirror-content:before {
   font-size: 10px;
   text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
   text-align: center;
-  bottom: 8px;
+  top: -32px;
   z-index: 100;
   transition: all 0.5s ease;
   padding: 16px;
   background: #000;
   border-radius: 32px;
+}
+body main .styleMore {
+  position: relative;
+  left: 8px;
+  bottom: 72px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  letter-spacing: 2px;
+  text-align: center;
+  color: #fff;
+  background: #333;
+  margin: 0 auto;
+  padding: 16px 32px;
+  border-radius: 8px;
 }
 
 footer {
