--- a/css/main.scss
+++ b/css/main.scss
@@ -336,7 +336,7 @@ body {
       .scene {
         width: 100%;
         position: relative;
-        height: 86%;
+        height: 83%;
         background: #daacae;
         display: flex;
         flex-direction: row;
@@ -434,7 +434,7 @@ body {
           font-size: 10px;
           text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
           text-align: center;
-          bottom: 8px;
+          top: -32px;
           z-index: 100;
           // opacity: 0.6;
           transition: all 0.5s ease;
@@ -443,6 +443,19 @@ body {
           border-radius: 32px;
         }
       }
+    }
+    .styleMore {
+      position: relative;
+      left: 8px;
+      bottom: 72px;
+      width: fit-content;
+      letter-spacing: 2px;
+      text-align: center;
+      color: #fff;
+      background: #333;
+      margin: 0 auto;
+      padding: 16px 32px;
+      border-radius: 8px;
     }
   } 
 }
