--- a/css/main.css
+++ b/css/main.css
@@ -251,7 +251,7 @@ body main .search .search_bar .search_container {
 }
 body main .search .search_bar .search_container input,
 body main .search .search_bar .search_container button {
-  border: 2px solid #7fbfff;
+  border: 2px solid #222;
   outline: 0;
   font-size: 16px;
   vertical-align: middle;
@@ -267,17 +267,16 @@ body main .search .search_bar .search_container input {
 body main .search .search_bar .search_container button {
   border-left: none;
   border-radius: 0 32px 32px 0;
-  color: #969696;
+  color: #000;
   margin-left: -6px;
   padding: 6px 24px;
-  background: rgba(127, 191, 255, 0.5);
   transition: all 0.3s;
   font-size: 24px;
 }
 body main .search .search_bar .search_container button:hover {
   cursor: pointer;
   color: #fff;
-  background: #3879D9;
+  background: #555;
 }
 body main .information {
   margin: 56px auto;
@@ -428,6 +427,31 @@ body main .styleMore {
   margin: 0 auto;
   padding: 16px 32px;
   border-radius: 8px;
+}
+body .contents {
+  margin: 0 auto;
+  text-align: center;
+}
+body .contents .contentsItem {
+  margin: 0 auto 32px;
+}
+body .contents .newItem {
+  margin-bottom: -8px;
+  padding: 32px 0;
+  background: #bd979f;
+}
+body .title {
+  color: #555;
+  letter-spacing: 4px;
+}
+body .title p:first-child {
+  font-size: 20px;
+}
+body .title p:nth-child(3) {
+  width: 80px;
+  margin: 8px auto;
+  border: 1px solid #000;
+  border-radius: 16px;
 }
 
 footer {
