--- a/css/main.scss
+++ b/css/main.scss
@@ -277,7 +277,7 @@ body {
           box-sizing: border-box;
           input,
           button {
-            border: 2px solid #7fbfff;
+            border: 2px solid #222;
             outline: 0;
             font-size: 16px;
             vertical-align: middle;
@@ -293,16 +293,16 @@ body {
           button {
             border-left: none;
             border-radius: 0 32px 32px 0;
-            color: #969696;
+            color: #000;
             margin-left: -6px;
             padding: 6px 24px;
-            background: rgba($color: #7fbfff, $alpha: 0.5);
+            // background: rgba($color: #666, $alpha: 0.5);
             transition: all 0.3s;
             font-size: 24px;
             &:hover {
               cursor: pointer;
               color: #fff;
-              background: #3879D9;
+              background: #555;
             }
           }
         }
@@ -458,6 +458,31 @@ body {
       border-radius: 8px;
     }
   } 
+  .contents {
+    margin: 0 auto;
+    text-align: center;
+    .contentsItem {
+      margin: 0 auto 32px;
+    }
+    .newItem {
+      margin-bottom: -8px;
+      padding: 32px 0;
+      background: #bd979f;
+    }
+  }
+  .title {
+    color: #555;
+    letter-spacing: 4px;
+    p:first-child {
+      font-size: 20px;
+    }
+    p:nth-child(3) {
+      width: 80px;
+      margin: 8px auto;
+      border: 1px solid #000;
+      border-radius: 16px;
+    }
+  }
 }
 
 footer {
