--- a/css/main.css
+++ b/css/main.css
@@ -474,4 +474,10 @@ footer a {
   .hidden {
     display: none;
   }
+  footer {
+    font-size: 8px;
+  }
+  footer a {
+    font-size: 8px;
+  }
 }/*# sourceMappingURL=main.css.map */
