--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,11 @@
   font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, "MS Pゴシック", sans-serif;
 }
 
+body {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
 header .first_header {
   display: flex;
   position: fixed;
@@ -106,25 +111,36 @@ header .first_header .hamburger_box nav.globalMenuSp ul {
   width: 100%;
 }
 header .first_header .hamburger_box nav.globalMenuSp ul li {
+  max-width: 800px;
   list-style-type: none;
   padding: 0;
-  margin: 0 auto;
+  margin: 24px auto;
   width: 90%;
   text-align: center;
-  border-bottom: 1px solid #555;
+  font-weight: bold;
 }
 header .first_header .hamburger_box nav.globalMenuSp ul li p {
   -moz-text-align-last: left;
        text-align-last: left;
+  border-bottom: 1px dashed #999;
+  padding: 8px 0;
+  font-weight: normal;
 }
 header .first_header .hamburger_box nav.globalMenuSp ul li a {
   display: block;
   color: #000;
   padding: 1em 0;
+  margin: 8px 0;
+  text-align: right;
   text-decoration: none;
+  letter-spacing: 4px;
+  border-radius: 8px;
 }
 header .first_header .hamburger_box nav.globalMenuSp ul li a:hover {
   background: #ddd;
+}
+header .first_header .hamburger_box nav.globalMenuSp ul .listItem {
+  margin-top: 24px;
 }
 header .first_header .hamburger_box nav.globalMenuSp.active {
   transform: translateX(0%);
