--- a/css/main.scss
+++ b/css/main.scss
@@ -11,6 +11,12 @@
   ;
 }
 
+body {
+  max-width: 1200px;
+  margin: 0 auto;
+  // background: #000;
+}
+
 header {
   .first_header {
     display: flex;
@@ -130,24 +136,35 @@ header {
             padding: 0;
             width: 100%;
             li {
+              max-width: 800px;
               list-style-type: none;
               padding: 0;
-              margin: 0 auto;
+              margin: 24px auto;
               width: 90%;
               text-align: center;
-              border-bottom: 1px solid #555;
+              font-weight: bold;
               p {
                 text-align-last: left;
+                border-bottom: 1px dashed #999;
+                padding: 8px 0;
+                font-weight: normal;
               }
               a {
                 display: block;
                 color: #000;
                 padding: 1em 0;
+                margin: 8px 0;
+                text-align: right;
                 text-decoration :none;
+                letter-spacing: 4px;
+                border-radius: 8px;
                 &:hover{
                   background :#ddd;
                 }
               }
+            }
+            .listItem {
+              margin-top: 24px;
             }
           }
           &.active {
